Fix T46842: Removing World is missing AO update in viewport render